[gd_scene load_steps=4 format=3 uid="uid://cslw1j4o8sn56"]

[ext_resource type="Script" path="res://crafting/knife_.gd" id="1_5ybhr"]
[ext_resource type="Texture2D" uid="uid://cnja0ky17k5qc" path="res://crafting/interiors/knife.png" id="2_j3geu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wknhm"]
size = Vector2(83, 26)

[node name="knife_" type="Node2D"]
script = ExtResource("1_5ybhr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(40.25, -8)
scale = Vector2(6.28666, 5.2)
texture = ExtResource("2_j3geu")

[node name="knife" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="knife"]
position = Vector2(33.5, -8)
shape = SubResource("RectangleShape2D_wknhm")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="knife" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="knife" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
